Revalidate cold-replay bundle provenance and document the Scala/JVM workflow
Revalidate a loaded finding bundle's provenance in the cold-replay command
before confirming or writing it, so a hand-edited or corrupt bundle missing
required provenance is rejected on load rather than replayed and written as
confirmed. Document the JVM/Scala language-server fuzzing workflow and the
one-command cold-replay in the README, list Scala as a supported language,
add the Scala/zaozi/agent/SemanticDB/SQLite domain terms to the spell-check
allowlist, correct a stale coverage-signal comment in the regime-2 script, and
exclude vendored upstream and generated grammar files from spell-checking.